--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next"],
   "rules": {
+    "@next/next/no-img-element": "off",
     "no-unused-vars": "warn",
     "no-undef": "error"
   }
